Challenge08/srv-ch08-red.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
    tier: backend
spec:
  type: NodePort
  ports:
    - port: 6379
      targetPort: redis-server
  selector:
    app: redis
    tier: backend
