Challenge08/srv-ch08.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook
  labels:
    app: guestbook
    tier: frontend
spec:
  type: NodePort
  ports: 
    - name: service-http
      port: 80
      targetPort: http-server
  selector:
    app: guestbook
    tier: frontend
